--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-sparklines": "^1.7.0",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
   },
